# bramble

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  LOGGING.md  PLAN.md  README.md  STYLE.md  bramble.cpp  main.cpp  main.h  package-lock.json  setup.sh  test_v4_blink.cpp  valve_test.cpp
.beads/: bramble.db  issues.jsonl
.githooks/: pre-commit
.serena/: project.yml
api/: .dockerignore  Dockerfile  README.md  app.py  auth.py  command_queue.py  config.py  database.py  docker-compose.prod.yml  docker-compose.yml  event_types.py  models.py  pyproject.toml  s3_sync.py  serial_interface.py  valve_groups.py
api/docs/: API.md
api/scripts/: register_rachio_webhook.py
api/systemd/: bramble-api.service
api/tests/: __init__.py  conftest.py  seed_test_data.py  test_auth.py  test_rachio_db.py  test_rachio_webhook.py  test_sensor_api.py  test_valve_groups_api.py  test_valve_groups_db.py  test_valve_groups_engine.py
boards/: bramble_v4.h  bramble_v5.h
dashboard/: .env  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: battery-life-analysis.md
ios/: .gitignore  README.md  project.yml
plans/: ac_valve_controller.md  api-loading-performance.md  cm5_bringup.md  code_simplification_plan.md  command_queue_huey.md  cpp-style-standards.md  dark-mode.md  duckdb_migration.md  event_detail_display.md  factory_reset.md  firmware_version_reporting.md  flash_log_storage.md  flash_transmitted_flag.md  greenhouse_1_firmware.md  greenhouse_2_hub.md  (+29 more)
(+381 files in other folders)
