[project]
name = "bramble-api"
version = "0.1.0"
description = "REST API for Bramble LoRa irrigation system"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-compress>=1.14",
    "pyserial>=3.5",
    "duckdb>=0.10.0",
    "huey>=2.5.0",
    "requests>=2.31.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
